# MAIA

./: .gitignore  LICENSE  README.md  pyproject.toml
ccam/: Analysis.ipynb
ccam/java/: pom.xml
ccam/resources/brussels/: enrichment.yml
ccam/resources/paris/: spatial.gpkg
ccam/workflow/: java.smk  paris.smk
ccam/workflow/notebooks/: Combine areas.ipynb  Enrich demand.ipynb  Extract profile.ipynb  Filter demand.ipynb  Prepare analysis.ipynb  Prepare network.ipynb
ccam/workflow/scripts/: convert_network.sh  create_demand.sh  create_fleet.sh  create_travel_time_matrix.sh  run_simulation.sh
demand/resources/madrid/airport/: location.gpkg
demand/resources/paris/airport/: locations.gpkg
demand/workflow/: brussels.smk  madrid.smk  maia.smk  paris.smk
demand/workflow/notebooks/airport/: Prepare daily total.ipynb  Prepare departure hour.ipynb  Prepare group size.ipynb  Prepare passenger profile.ipynb
demand/workflow/notebooks/documentation/: Belgium input.ipynb  Belgium results.ipynb
demand/workflow/notebooks/osm/: Extract buildings.ipynb
demand/workflow/notebooks/population/: Discretize population.ipynb  Initialize passengers marginal.ipynb  Initialize population.ipynb  Iterative Proportional Fitting.ipynb  Localize population (location-based).ipynb  Localize population (zone-based).ipynb  (+2 more)
docs/: ccam.md  demand.md  environment.md
docs/extended/: brussels.md  madrid.md  paris.md
extended/brussels/workflow/: demand.smk  tml.smk
extended/paris/: .gitignore
extended/paris/resources/: .gitignore
extended/paris/workflow/: demand.smk
(+49 files in other folders)
